--- a/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/SupportContent/Views/FAQWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.SupportContent.Silverlight/SupportContent/Views/FAQWindow.xaml
@@ -1,46 +1,28 @@
-﻿<controls:ChildWindow x:Class="TheS.Casinova.SupportContent.Views.FAQWindow"
+﻿<controls:ChildWindow
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:controls="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls"
+           xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="TheS.Casinova.SupportContent.Views.FAQWindow"
            Width="600" Height="400" 
            Title="FAQ." FontSize="21.333">
-    <Grid Name="LayoutRoot">
+    <Grid x:Name="LayoutRoot">
         <Grid.RowDefinitions>
-            <RowDefinition Height="387*" />
-            <RowDefinition Height="112" />
+            <RowDefinition />
+            <RowDefinition Height="55" />
         </Grid.RowDefinitions>
-        <Button Click="CloseButton_Click" Content="Close" FontSize="11" Grid.Row="1" Height="23" HorizontalAlignment="Right" Margin="0,89,0,0" Name="CloseButton" Width="75" />
-        <ScrollViewer Margin="0,23,0,0">
-            <RichTextBox HorizontalAlignment="Left" Name="contentBox" 
-        VerticalAlignment="Top" Height="354" Width="594" IsReadOnly="True">
-                <Paragraph FontFamily="Georgia" FontSize="12" TextAlignment="Justify">
-                    This photograph depicting a
-                    <Run Text=" flower closeup " 
-                         FontStyle="Italic" 
-                         FontWeight="ExtraBold" /> belongs to the
-                    <Run Text=" macro "
-                         Foreground="Red" 
-                         FontWeight="ExtraBold"/> genre of photography. 
-                    Macro photography requires a great deal of precision. 
-                    You need a sharp pair of lenses to capture
-                    <Run Text=" high quality closeups. " 
-             Foreground="DarkBlue" FontWeight="ExtraBold"/>
-                    <LineBreak/>
-                    <InlineUIContainer></InlineUIContainer>
-                    <LineBreak/>
-                    <LineBreak/>
-                    <Hyperlink NavigateUri="http://en.wikipedia.org/wiki/Macro_photography">
-                        Click here to read about macro photography</Hyperlink>
-                </Paragraph>
-            </RichTextBox>
-        </ScrollViewer>
-        <TextBlock FontSize="13.333" FontWeight="Bold" HorizontalAlignment="Left" Text="Information." TextWrapping="Wrap" VerticalAlignment="Top" />
-        <Grid Grid.Row="1" Height="68" HorizontalAlignment="Left" Name="grid1" VerticalAlignment="Top" Width="622" Margin="0,6,0,0" >
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Your question" VerticalAlignment="Center" Margin="5"/>
-                <TextBox Width="377" Height="34" Margin="5"/>
-                <Button Content="Send" Height="37" Width="63" Margin="5"/>
-            </StackPanel>
+        <Button Click="CloseButton_Click" Content="Close" FontSize="11" Grid.Row="1" Height="23" HorizontalAlignment="Right" Margin="0,32,0,0" x:Name="CloseButton" Width="75" />
+        <Grid Grid.Row="1" HorizontalAlignment="Left" x:Name="grid1" Width="582" Margin="0,6,0,27" d:LayoutOverrides="Height" >
+            <TextBlock Text="Your question" VerticalAlignment="Center" FontSize="11" HorizontalAlignment="Left"/>
+        	<TextBox Height="22" FontSize="11" VerticalAlignment="Center" Margin="80,0,67,0"/>
+        	<Button Content="Send" Height="22" Width="63" FontSize="11" VerticalAlignment="Center" HorizontalAlignment="Right"/>
         </Grid>
+        <RichTextBox x:Name="contentBox" IsReadOnly="True">
+        	<Paragraph FontFamily="Georgia" FontSize="12" TextAlignment="Justify"><Run Text="This photograph depicting a "/><Run Text=" flower closeup " 
+        			FontStyle="Italic" 
+        			FontWeight="ExtraBold" /><Run Text=" belongs to the "/><Run Text=" macro "
+        			Foreground="Red" 
+        			FontWeight="ExtraBold"/><Run Text=" genre of photography. Macro photography requires a great deal of precision. You need a sharp pair of lenses to capture "/><Run Text=" high quality closeups. " 
+        			Foreground="DarkBlue" FontWeight="ExtraBold"/><Run Text=" "/><LineBreak/><Run Text=" "/><InlineUIContainer/><Run Text=" "/><LineBreak/><Run Text=" "/><LineBreak/><Run Text=" "/><Hyperlink NavigateUri="http://en.wikipedia.org/wiki/Macro_photography"><Run Text="Click here to read about macro photography"/></Hyperlink></Paragraph>
+        </RichTextBox>
     </Grid>
 </controls:ChildWindow>
