--- a/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
+++ b/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
@@ -19,6 +19,7 @@
     <script src="../../Scripts/jquery.hoverscroll-0.2.2.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script src="../../Scripts/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="../../Scripts/jquery.popupWindow.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="page">
