--- a/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/DevilSix/Silverlight/App.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.DevilSix.Silverlight/DevilSix/Silverlight/App.xaml
@@ -4,5 +4,11 @@
              >
     <Application.Resources>
         
+    	<ResourceDictionary>
+    		<ResourceDictionary.MergedDictionaries>
+    			<ResourceDictionary Source="/TheS.Casinova.DevilSix.Silverlight;component/DevilSix/Views/ResourceDictionary01.xaml"/>
+    		</ResourceDictionary.MergedDictionaries>
+    	</ResourceDictionary>
+        
     </Application.Resources>
 </Application>
