--- a/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/MagicNine/Controls/GamePlayUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/MagicNine/Controls/GamePlayUI.xaml
@@ -3,12 +3,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:TheS_Casinova_MagicNine_ViewModels="clr-namespace:TheS.Casinova.MagicNine.ViewModels" x:Class="TheS.Casinova.MagicNine.Controls.GamePlayUI"
+    x:Class="TheS.Casinova.MagicNine.Controls.GamePlayUI"
     mc:Ignorable="d"
     d:DesignHeight="300" d:DesignWidth="400" Width="500" Height="400">
     
 	<UserControl.Resources>
-		<TheS_Casinova_MagicNine_ViewModels:GamePlayViewModel x:Key="GamePlayViewModelDataSource" d:IsDataSource="True"/>
 		<DataTemplate x:Key="DoubleTemplate">
 			<StackPanel>
 				<TextBlock Text="{Binding Mode=OneWay}"/>
@@ -18,9 +17,6 @@
 			<StackPanel Orientation="Horizontal"/>
 		</ItemsPanelTemplate>
 	</UserControl.Resources>
-	<UserControl.DataContext>
-		<Binding Source="{StaticResource GamePlayViewModelDataSource}"/>
-	</UserControl.DataContext>
     
     <Grid x:Name="LayoutRoot">
     	<Grid.RowDefinitions>
