--- a/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
+++ b/src/SPerfAll/sPerf_Web/Views/Shared/MasterPage.Master
@@ -10,6 +10,8 @@
     <link href="../../Content/movies.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/jquery.hoverscroll-0.2.2.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/jquery.ui.dialog.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/style.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/skin.css" rel="stylesheet" type="text/css" />
     <script src="../../Scripts/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery-ui-1.8.1.custom.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery.pager.js" type="text/javascript"></script>
@@ -20,6 +22,7 @@
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
     <script src="../../Scripts/jquery-ui.min.js" type="text/javascript"></script>
     <script src="../../Scripts/jquery.popupWindow.js" type="text/javascript"></script>
+    <script src="../../Scripts/jquery.jcarousel.min.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="page">
