--- a/src/SPerfAll/sPerf_Web/Content/skin.css
+++ b/src/SPerfAll/sPerf_Web/Content/skin.css
@@ -1,5 +1,5 @@
 .jcarousel-skin-tango .jcarousel-container {
-    -moz-border-radius: 0px;
+    -moz-border-radius: 10px;
 }
 
 .jcarousel-skin-tango .jcarousel-direction-rtl {
@@ -7,19 +7,22 @@
 }
 
 .jcarousel-skin-tango .jcarousel-container-horizontal {
-    width: 100px;
+    width: 145px;
 }
 
 .jcarousel-skin-tango .jcarousel-container-vertical {
-    width: 330px;
-    height: 245px;-skin-tango .jcarousel-clip-horizontal {
-    width:  100px;
-    height: 325px;
+    width: 75px;
+    height: 245px;
+}
+
+.jcarousel-skin-tango .jcarousel-clip-horizontal {
+    width:  145px;
+    height: 245px;
 }
 
 .jcarousel-skin-tango .jcarousel-clip-vertical {
-    width:  330px;
-    height: 445px;
+    width:  75px;
+    height: 245px;
 }
 
 .jcarousel-skin-tango .jcarousel-item {
@@ -29,16 +32,16 @@
 
 .jcarousel-skin-tango .jcarousel-item-horizontal {
 	margin-left: 0;
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 .jcarousel-skin-tango .jcarousel-direction-rtl .jcarousel-item-horizontal {
-	margin-left: 10px;
+	margin-left: 5px;
     margin-right: 0;
 }
 
 .jcarousel-skin-tango .jcarousel-item-vertical {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .jcarousel-skin-tango .jcarousel-item-placeholder {
@@ -46,13 +49,78 @@
     color: #000;
 }
 
+/**
+ *  Horizontal Buttons
+ 
+.jcarousel-skin-tango .jcarousel-next-horizontal {
+    position: absolute;
+    top: 43px;
+    right: 5px;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    background: transparent url(/Content/images/next-horizontal.png) no-repeat 0 0;
+}
+
+.jcarousel-skin-tango .jcarousel-direction-rtl .jcarousel-next-horizontal {
+    left: 5px;
+    right: auto;
+    background-image: url(/Content/images/prev-horizontal.png);
+}
+
+.jcarousel-skin-tango .jcarousel-next-horizontal:hover {
+    background-position: -32px 0;
+}
+
+.jcarousel-skin-tango .jcarousel-next-horizontal:active {
+    background-position: -64px 0;
+}
+
+.jcarousel-skin-tango .jcarousel-next-disabled-horizontal,
+.jcarousel-skin-tango .jcarousel-next-disabled-horizontal:hover,
+.jcarousel-skin-tango .jcarousel-next-disabled-horizontal:active {
+    cursor: default;
+    background-position: -96px 0;
+}
+
+.jcarousel-skin-tango .jcarousel-prev-horizontal {
+    position: absolute;
+    top: 43px;
+    left: 5px;
+    width: 32px;
+    height: 32px;
+    cursor: pointer;
+    background: transparent url(/Content/images/prev-horizontal.png) no-repeat 0 0;
+}
+
+.jcarousel-skin-tango .jcarousel-direction-rtl .jcarousel-prev-horizontal {
+    left: auto;
+    right: 5px;
+    background-image: url(/Content/images/next-horizontal.png);
+}
+
+.jcarousel-skin-tango .jcarousel-prev-horizontal:hover {
+    background-position: -32px 0;
+}
+
+.jcarousel-skin-tango .jcarousel-prev-horizontal:active {
+    background-position: -64px 0;
+}
+
+.jcarousel-skin-tango .jcarousel-prev-disabled-horizontal,
+.jcarousel-skin-tango .jcarousel-prev-disabled-horizontal:hover,
+.jcarousel-skin-tango .jcarousel-prev-disabled-horizontal:active {
+    cursor: default;
+    background-position: -96px 0;
+}*/
 
 /**
- *  Vertical Buttons*/
- 
+ *  Vertical Buttons
+
 .jcarousel-skin-tango .jcarousel-next-vertical {
     position: absolute;
-    left: 150px;
+    bottom: 5px;
+    left: 43px;
     width: 32px;
     height: 32px;
     cursor: pointer;
@@ -76,12 +144,8 @@
 
 .jcarousel-skin-tango .jcarousel-prev-vertical {
     position: absolute;
-    left: 150px;
-    width: 32px;
-    height: 32px;
-    cursor: pointer;
-    back;
-    left: 150px;
+    top: 5px;
+    left: 43px;
     width: 32px;
     height: 32px;
     cursor: pointer;
@@ -102,3 +166,4 @@
     cursor: default;
     background-position: 0 -96px;
 }
+ */
