--- a/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GameStatisticsUI.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.Colors.Silverlight/Colors/Controls/GameStatisticsUI.xaml
@@ -57,8 +57,8 @@
     		</Grid.ColumnDefinitions>
     		<Button x:Name="OptionButton" Content="Single" Margin="0,0,5,0"/>
 
-    		<sdk:DatePicker x:Name="FirstData" d:LayoutOverrides="Height" Grid.Column="1"/>
-    		<sdk:DatePicker x:Name="SecondData" d:LayoutOverrides="Height" Grid.Column="3" Visibility="Collapsed"/>
+    		<sdk:DatePicker x:Name="FirstData" d:LayoutOverrides="Height" Grid.Column="1" SelectedDate="{Binding FirstData}"/>
+    		<sdk:DatePicker x:Name="SecondData" d:LayoutOverrides="Height" Grid.Column="3" Visibility="Collapsed" SelectedDate="{Binding SecondData}"/>
     		<TextBlock x:Name="textBlock" TextWrapping="Wrap" Text="to" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center" Visibility="Collapsed"/>
 
     	</Grid>
@@ -77,7 +77,7 @@
     		</Grid>
 
     	</StackPanel>
-    	<Grid Height="42" Margin="137,0,144,35" Grid.Row="1" VerticalAlignment="Bottom">
+    	<Grid Grid.Row="1" VerticalAlignment="Bottom" Margin="0,0,0,35" HorizontalAlignment="Center">
     		<Grid.ColumnDefinitions>
     			<ColumnDefinition Width="0.5*"/>
     			<ColumnDefinition Width="0.5*"/>
@@ -86,10 +86,13 @@
     			<RowDefinition Height="0.5*"/>
     			<RowDefinition Height="0.5*"/>
     		</Grid.RowDefinitions>
-    		<TextBlock TextWrapping="Wrap" Text="Black" FontSize="13.333" d:LayoutOverrides="Height, GridBox" Margin="0,0,0,4" HorizontalAlignment="Center" FontWeight="Bold"/>
-    		<TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="White" FontSize="13.333" d:LayoutOverrides="Height" Margin="0,0,0,4" Grid.Column="1" FontWeight="Bold"/>
-    		<TextBlock x:Name="BlackPOT" TextWrapping="Wrap" Text="{Binding BlackPot}" FontSize="13.333" d:LayoutOverrides="Height" Grid.Row="1" HorizontalAlignment="Center"/>
-    		<TextBlock x:Name="WhitePOT" TextWrapping="Wrap" Text="{Binding WhitePot}" FontSize="13.333" d:LayoutOverrides="Height" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center"/>
+    		<Rectangle Grid.ColumnSpan="2" Grid.RowSpan="2" Stroke="Black" RadiusX="2" RadiusY="2" StrokeThickness="2"/>
+    		<Rectangle Grid.ColumnSpan="2" Stroke="Black" StrokeThickness="2"/>
+
+    		<TextBlock TextWrapping="Wrap" Text="Black" FontSize="13.333" d:LayoutOverrides="Height, GridBox" Margin="8,4" HorizontalAlignment="Center" FontWeight="Bold" VerticalAlignment="Center"/>
+    		<TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="White" FontSize="13.333" d:LayoutOverrides="Height" Margin="8,4" Grid.Column="1" FontWeight="Bold" VerticalAlignment="Center"/>
+    		<TextBlock x:Name="BlackPOT" TextWrapping="Wrap" Text="{Binding BlackPot}" FontSize="13.333" d:LayoutOverrides="Height" Grid.Row="1" HorizontalAlignment="Center" Margin="8,4"/>
+    		<TextBlock x:Name="WhitePOT" TextWrapping="Wrap" Text="{Binding WhitePot}" FontSize="13.333" d:LayoutOverrides="Height" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" Margin="8,4"/>
 
     	</Grid>
 
