--- a/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/MagicNine/Views/GamePlayPage.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.MagicNine.Silverlight/MagicNine/Views/GamePlayPage.xaml
@@ -9,8 +9,8 @@
            d:DesignWidth="600" d:DesignHeight="400"
            Title="GamePlayPage Page">
 	<navigation:Page.Resources>
-		<PerfEx_Infrastructure:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 		<TheS_Casinova_MagicNine_ViewModels:GamePlayViewModel x:Key="GamePlayViewModelDataSource" d:IsDataSource="True"/>
+		<PerfEx_Infrastructure:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 		<DataTemplate x:Key="GameTableTemplate">
 			<Grid>
 				<Rectangle Stroke="Black" RadiusX="1" RadiusY="1">
@@ -41,7 +41,67 @@
     <Grid x:Name="LayoutRoot">
 
     	<TheS_Casinova_MagicNine_Controls:GamePlayUI Margin="0,0,204,0" Width="Auto" Height="Auto"/>
-    	<ListBox HorizontalAlignment="Right" Width="200" ItemTemplate="{StaticResource GameTableTemplate}" ItemsSource="{Binding Tables}" ItemContainerStyle="{StaticResource ListBoxItemStyle1}"/>
+    	<ListBox HorizontalAlignment="Right" Width="200" ItemTemplate="{StaticResource GameTableTemplate}" ItemsSource="{Binding Tables}">
+    		<ListBox.ItemContainerStyle>
+    			<Style TargetType="ListBoxItem">
+    				<Setter Property="Padding" Value="3"/>
+    				<Setter Property="HorizontalContentAlignment" Value="Left"/>
+    				<Setter Property="VerticalContentAlignment" Value="Top"/>
+    				<Setter Property="Background" Value="Transparent"/>
+    				<Setter Property="BorderThickness" Value="1"/>
+    				<Setter Property="TabNavigation" Value="Local"/>
+    				<Setter Property="Template">
+    					<Setter.Value>
+    						<ControlTemplate TargetType="ListBoxItem">
+    							<Grid Background="{TemplateBinding Background}">
+    								<VisualStateManager.VisualStateGroups>
+    									<VisualStateGroup x:Name="CommonStates">
+    										<VisualState x:Name="Normal"/>
+    										<VisualState x:Name="MouseOver">
+    											<Storyboard>
+    												<DoubleAnimation Duration="0" To=".35" Storyboard.TargetProperty="Opacity" Storyboard.TargetName="fillColor"/>
+    											</Storyboard>
+    										</VisualState>
+    										<VisualState x:Name="Disabled">
+    											<Storyboard>
+    												<DoubleAnimation Duration="0" To=".55" Storyboard.TargetProperty="Opacity" Storyboard.TargetName="contentPresenter"/>
+    											</Storyboard>
+    										</VisualState>
+    									</VisualStateGroup>
+    									<VisualStateGroup x:Name="SelectionStates">
+    										<VisualState x:Name="Unselected"/>
+    										<VisualState x:Name="Selected">
+    											<Storyboard>
+    												<DoubleAnimation Duration="0" To=".75" Storyboard.TargetProperty="Opacity" Storyboard.TargetName="fillColor2"/>
+    											</Storyboard>
+    										</VisualState>
+    									</VisualStateGroup>
+    									<VisualStateGroup x:Name="FocusStates">
+    										<VisualState x:Name="Focused">
+    											<Storyboard>
+    												<ObjectAnimationUsingKeyFrames Duration="0" Storyboard.TargetProperty="Visibility" Storyboard.TargetName="FocusVisualElement">
+    													<DiscreteObjectKeyFrame KeyTime="0">
+    														<DiscreteObjectKeyFrame.Value>
+    															<Visibility>Visible</Visibility>
+    														</DiscreteObjectKeyFrame.Value>
+    													</DiscreteObjectKeyFrame>
+    												</ObjectAnimationUsingKeyFrames>
+    											</Storyboard>
+    										</VisualState>
+    										<VisualState x:Name="Unfocused"/>
+    									</VisualStateGroup>
+    								</VisualStateManager.VisualStateGroups>
+    								<Rectangle x:Name="fillColor" Fill="#FFBADDE9" IsHitTestVisible="False" Opacity="0" RadiusY="1" RadiusX="1"/>
+    								<Rectangle x:Name="fillColor2" Fill="#FFBADDE9" IsHitTestVisible="False" Opacity="0" RadiusY="1" RadiusX="1"/>
+    								<ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding ContentTemplate}" Content="{TemplateBinding Content}" Margin="{TemplateBinding Padding}"/>
+    								<Rectangle x:Name="FocusVisualElement" RadiusY="1" RadiusX="1" Stroke="#FF6DBDD1" StrokeThickness="1" Visibility="Collapsed"/>
+    							</Grid>
+    						</ControlTemplate>
+    					</Setter.Value>
+    				</Setter>
+    			</Style>
+    		</ListBox.ItemContainerStyle>
+    	</ListBox>
 
     </Grid>
 </navigation:Page>
