--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerAccount/Views/AccountInformationEditPage.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerAccount/Views/AccountInformationEditPage.xaml
@@ -1,4 +1,4 @@
-﻿<navigation:Page x:Class="TheS.Casinova.PlayerProfile.Views.AccountManagerEditPage" 
+﻿<navigation:Page x:Class="TheS.Casinova.PlayerAccount.Views.AccountInformationEditPage" 
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
            mc:Ignorable="d"
            xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation"
            d:DesignWidth="600" d:DesignHeight="200"
-           Title="AccountManagerEditPage Page" Height="Auto">
+           Title="AccountInformationEditPage Page">
     <Grid x:Name="LayoutRoot">
     	<ScrollViewer>
     		<Grid Height="200" Width="576">
@@ -20,19 +20,20 @@
     				<TextBox x:Name="EmailTextBlock" TextWrapping="Wrap" Text="EmailTextBlock" Margin="74,36,8,33" d:LayoutOverrides="Height"/>
     				<ComboBox x:Name="GenderComboBox" Margin="74,0,8,9" VerticalAlignment="Bottom"/>
     			</Grid>
-    			<Grid Margin="0,97,0,0">
+    			<Grid Margin="0,97,0,-16">
     				<Rectangle Fill="#FFDADADA" Stroke="Black"/>
-    				<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current password:" VerticalAlignment="Bottom" Margin="8,0,0,19" FontWeight="Bold"/>
+    				<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Current password:" VerticalAlignment="Bottom" Margin="9,0,0,35" FontWeight="Bold"/>
     				<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="New password:" Margin="8,12,0,0" FontWeight="Bold" VerticalAlignment="Top"/>
     				<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Confirm password:" Margin="7,39,0,48" FontWeight="Bold" d:LayoutOverrides="Height"/>
     				<TextBox x:Name="NewPasswordTextBlock" TextWrapping="Wrap" Text="NewPasswordTextBlock" VerticalAlignment="Top" Margin="128,8,100,0"/>
-    				<TextBox x:Name="ConfirmPasswordTextBlock" TextWrapping="Wrap" Text="ConfirmPasswordTextBlock" Margin="128,36,100,43" d:LayoutOverrides="Height"/>
-    				<TextBox x:Name="CurrentPasswordTextBlock" TextWrapping="Wrap" Text="CurrentPasswordTextBlock" Margin="128,0,100,15" VerticalAlignment="Bottom"/>
+    				<TextBox x:Name="ConfirmPasswordTextBlock" TextWrapping="Wrap" Text="ConfirmPasswordTextBlock" Margin="128,36,100,43" d:LayoutOverrides="Height" VerticalAlignment="Top"/>
+    				<TextBox x:Name="CurrentPasswordTextBlock" TextWrapping="Wrap" Text="CurrentPasswordTextBlock" Margin="128,0,100,31" VerticalAlignment="Bottom"/>
     				<HyperlinkButton x:Name="SaveHyperlinkButton" Content="Save" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,8,8" NavigateUri="/TheS.Casinova.PlayerAccount.Silverlight;component/PlayerAccount/Views/PlayerInformationPage.xaml"/>
 
     			</Grid>
 
     		</Grid>
     	</ScrollViewer>
+
     </Grid>
 </navigation:Page>
