--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerAccount/Views/AccountInformationPage.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerAccount/Views/AccountInformationPage.xaml
@@ -1,12 +1,19 @@
-﻿<navigation:Page x:Class="TheS.Casinova.PlayerAccount.Views.AccountInformationPage" 
+﻿<navigation:Page 
            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-           mc:Ignorable="d"
            xmlns:navigation="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Navigation"
+           xmlns:TheS_Casinova_PlayerAccount_ViewModels="clr-namespace:TheS.Casinova.PlayerAccount.ViewModels" x:Class="TheS.Casinova.PlayerAccount.Views.AccountInformationPage"
+           mc:Ignorable="d"
            d:DesignWidth="600" d:DesignHeight="200"
            Title="AccountInformationPage Page">
+	<navigation:Page.Resources>
+		<TheS_Casinova_PlayerAccount_ViewModels:AccountInformationViewModel x:Key="AccountInformationViewModelDataSource" d:IsDataSource="True"/>
+	</navigation:Page.Resources>
+	<navigation:Page.DataContext>
+		<Binding Source="{StaticResource AccountInformationViewModelDataSource}"/>
+	</navigation:Page.DataContext>
     <Grid x:Name="LayoutRoot">
     	<Grid VerticalAlignment="Top" d:LayoutOverrides="VerticalAlignment">
     		<Rectangle Fill="#FFF4F4F5" Stroke="Black"/>
@@ -14,9 +21,9 @@
     		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Name:" VerticalAlignment="Top" Margin="8,12,0,0" FontWeight="Bold"/>
     		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Gender:" Margin="8,0,0,25" FontWeight="Bold" VerticalAlignment="Bottom"/>
     		<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Email:" Margin="8,32,0,45" FontWeight="Bold" d:LayoutOverrides="Height"/>
-    		<TextBlock x:Name="Gender" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Gender" VerticalAlignment="Bottom" Margin="61,0,0,25"/>
-    		<TextBlock x:Name="Email" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Email" Margin="50,32,0,45" d:LayoutOverrides="Height"/>
-    		<TextBlock x:Name="Name" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Name" Margin="52,12,0,0" VerticalAlignment="Top"/>
+    		<TextBlock x:Name="Gender" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Gender}" VerticalAlignment="Bottom" Margin="61,0,0,25"/>
+    		<TextBlock x:Name="Email" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Email}" Margin="50,32,0,45" d:LayoutOverrides="Height"/>
+    		<TextBlock x:Name="Name" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Name}" Margin="52,12,0,0" VerticalAlignment="Top"/>
     	</Grid>
     	<HyperlinkButton x:Name="EditHyperlinkButton" Content="Edit" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,67,8,0" NavigateUri="/TheS.Casinova.PlayerAccount.Silverlight;component/PlayerAccount/Views/PlayerInformationPage.xaml"/>
 
