--- a/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerAccount/Views/PaymentWindow.xaml
+++ b/src/CasinovaAll/Silverlights/TheS.Casinova.PlayerAccount.Silverlight/PlayerAccount/Views/PaymentWindow.xaml
@@ -13,7 +13,7 @@
 
         <Button x:Name="CloseButton" Content="Close" Click="CloseButton_Click" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,0,0" Grid.Row="1" FontSize="11" />
         <Button x:Name="Save" Content="Save" Width="75" Height="23" HorizontalAlignment="Right" Margin="0,12,79,0" Grid.Row="1" FontSize="11" />
-        <controls:TabControl FontSize="11">
+        <controls:TabControl x:Name="PaymentTabControl" FontSize="11">
         	<controls:TabItem Header="Credits card">
         		<Grid Background="#FFE5E5E5">
         			<TextBlock HorizontalAlignment="Left" TextWrapping="Wrap" Text="Credit type" VerticalAlignment="Top" Margin="8,10,0,0" Width="132" TextAlignment="Right"/>
